--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item  active">
-                <img src="1.jpg" alt="...">
+                <img src="1.jpg" class="background" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Your Dream -- We Build</h5>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
               <div class="carousel-item ">
-                <img src="2.jpg" alt="...">
+                <img src="2.jpg" class="background" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="3.jpg" alt="...">
+                <img src="3.jpg" class="background" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
